--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   }
 }
