--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@angular/service-worker": "^19.2.0",
     "@popperjs/core": "^2.11.8",
-    "angularx-qrcode": "^14.0.0",
+    "angularx-qrcode": "^19.0.0",
     "bootstrap": "^5.3.5",
     "google-libphonenumber": "^3.2.42",
     "intl-tel-input": "^17.0.21",
     "libphonenumber-js": "^1.12.9",
     "ngx-intl-tel-input": "^17.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
